--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASS=bogdanel1
-DB_NAME=testDB
-DB_PORT=5432
+DATABASE_URL=postgresql://postgres:bogdanel1@localhost:5432/testDB
